# serve_adk

./: .gitignore  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  main.py
app/api/: agents.py  events.py  health.py  sessions.py
app/core/: errors.py  logging.py  streaming.py
app/models/: __init__.py  requests.py  responses.py
app/services/: agent_service.py  auth_service.py  event_service.py  session_service.py
app/utils/: converters.py
docs/: readme_curls.md
scripts/: run_tests.sh  setup_project.sh
tests/: conftest.py  test_agents.py  test_basic.py
tests/unit/: test_basic.py  test_config.py
